--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,8 @@
   margin: 0;
   padding: 0;
   
-  /* font-family: "quicksand" !important; */
-  font-family: proximanovasemi !important;
+  font-family: "quicksand" !important;
+  font-family: "proximanovasemi";
 
   --vermelho: rgb(196,26,26);
   --preto: #212121;
@@ -15,15 +15,15 @@
 }
 
 h1, h2 {
-  font-family: proximanovabold !important;
+  font-family: "proximanovabold" !important;
 }
 
 body {
   display: block;
   height: 100vh;
   color: white;
-  background-image: url('../img/fundo.png');
-  background-size: 100px;
+  background-image: url('../img/fundo_1.png');
+  background-size: 200px;
 }
 
 main {
@@ -74,13 +74,13 @@ a {
   padding: 10px 0px;
   text-decoration: none;
   font-weight: bolder;
-  font-size: 20px;
-  color: white;
+  font-size: 18px;
+  color: #e0e0e0;
 }
 
 .sidebar-menu-item:hover {
   background-color: #e0e0e0;
-  color: black;
+  color: var(--preto);
   cursor: pointer;
 }
 
@@ -90,7 +90,7 @@ a {
   bottom: 5px; 
 }
 .sidebar-redes a {
-  color: black;
+  color: var(--preto);
   font-size: 20px;
   font-weight: bolder;
 }
@@ -111,6 +111,14 @@ a {
   padding: 20px 40px;
 }
 
+.pagina-conteudo a {
+  color: var(--ciano);
+}
+
+.pagina-conteudo a:hover {
+  color: var(--vermelho);
+}
+
 .pagina {
   width: 80%;
   margin-top: 30px;
@@ -125,30 +133,57 @@ a {
 }
 .pagina p {
   line-height: 22px;
-}
-.pagina p {
   text-indent: 30px;
 }
 
-a.arquivo-programa {
-  font-size: 65px;
-  color: var(--vermelho);
-  background-color: var(--ciano);
+.pagina p img {
+  text-align: center;
+}
+
+.arquivo-programa {
+  font-family: "proximanovasemi" !important;
+  font-size: 35px;
+  color: #ffffff;
+  background-color: var(--vermelho);
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   border-radius: 10px;
   padding: 10px;
 }
-a.arquivo-programa div {
+.arquivo-programa div {
   font-size: 55px;
   text-align: center;
   background-color: var(--ciano);
 }
 
-a.arquivo-programa:hover, a.arquivo-programa:hover div {
-  background-color: var(--vermelho);
-  color: white;
+.arquivo-programa:hover, .arquivo-programa:hover div {
+  background-color: var(--ciano);
+  color: var(--vermelho);
+}
+
+.header-financiamento {
+  width: 860px;
+  height: 250px;
+  position: relative;
+  background: #242424;
+}
+
+.header-financiamento img {
+  /* width: 100%; */
+  height: 250px;
+  position: relative;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 20%;
+
+}
+
+.premios {
+  position: relative;
+  text-align: center;
+  background: #6ab0a4;
 }
 
 /* menu */
