--- a/css/main.css
+++ b/css/main.css
@@ -163,27 +163,21 @@ a {
 }
 
 .header-financiamento {
-  width: 860px;
-  height: 250px;
-  position: relative;
+  max-width: 860px;
+  max-height: 250px;
   background: #242424;
 }
 
 .header-financiamento img {
-  /* width: 100%; */
-  height: 250px;
-  position: relative;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  left: 20%;
-
+  width: 100%;
+  justify-content: center;
 }
 
 .premios {
-  position: relative;
-  text-align: center;
   background: #6ab0a4;
+}
+.premios img {
+  width: 100%;
 }
 
 /* menu */
